# MLOps

./: .dockerignore  .dvcignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  START_ALL_SERVICES.bat  docker-compose.yml  dvc.yaml  init_mlops.bat  init_mlops.sh  process_sample_docs.py  push_to_github.bat  pyproject.toml  requirements.txt  run_mlops_tests.py  setup.bat  setup.sh  start_project.ps1  test_complete_end_to_end.py
Trash/: generate_api_keys.py
Trash/Lab/: start_project.bat  start_project.ps1
Trash/dashboard_OLD/: Dockerfile  __init__.py  app.py
Trash/dashboard_OLD/.streamlit/: config.toml  secrets.toml  style.css
Trash/dashboard_OLD/components/: __init__.py  chatbot.py  comparison.py  data_viewer.py  document_manager.py  responsive_utils.py  search.py  upload.py
config/: alert_rules.yaml  logging_config.yaml  pipeline_config.yaml
dags/: Doc_process_Dag.py  __init__.py  document_processing_pipeline.py.disabled
deploy/gcp/: DOMAIN_SETUP.md  Dockerfile.frontend  QUICK_START.md  README.md  cloudbuild.yaml  deploy.ps1  deploy.sh
frontend/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts  vite.config.ts
frontend/components/: DocumentIntegrator.tsx  Sidebar.tsx  TalkToDocuments.tsx  UploadDocuments.tsx
frontend/services/: api.ts  audioUtils.ts  gemini.ts
mlops/: __init__.py  anomaly_detection.py  bias_detection.py  data_acquisition.py  preprocessing.py  validation.py
normalization/: __init__.py  bank_identifier.py  comparison_calculator.py  comparison_service.py  data_models.py  field_mapper.py  loan_type_classifier.py  normalization_service.py  output_generator.py  output_service.py  schema_validator.py
ocr/: README.md  __init__.py  layout_analyzer.py  mixed_content_handler.py  multipage_processor.py  ocr_engine.py  ocr_service.py  table_extractor.py
processing/: document_processor.py
scripts/: demo_complete_pipeline.py  integrate_with_loanqa.py  setup_integration.py  test_llm_quick.py  test_llm_service.py  test_vector_store.py
secrets/: .gitignore  README.md
src/: __init__.py  main.py
src/api/: BATCH_PROCESSING_IMPLEMENTATION.md  BATCH_PROCESSING_README.md  COMPLIANCE_IMPLEMENTATION_SUMMARY.md  COMPLIANCE_README.md  Dockerfile  README.md  __init__.py  advanced_routes.py  auth.py  batch_processor.py  batch_processor_example.py  cache_manager.py  compliance.py  compliance_routes.py  document_ingestion.py  document_preprocessor.py  error_handlers.py  main.py  metadata_extractor.py  models.py  rate_limiter.py  routes.py
src/api/services/: comparison_engine.py  financial_education.py  rag_chatbot_service.py  translation_service.py
src/core/: __init__.py  config.py  exceptions.py
src/extraction/: README.md  __init__.py  confidence_scorer.py  entity_extractor.py  example_usage.py  extraction_service.py  fee_extractor.py  field_extractor.py  schedule_extractor.py  terms_extractor.py
src/services/: __init__.py  chunking.py  llm_service.py  vector_store.py
storage/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  database.py  example_usage.py  init_db.sql  object_storage.py  security.py  setup_storage.py  storage_service.py
storage/migrations/: 001_add_vector_tables.sql
tests/: QUICK_START.md  README.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_LAB3_FILE_COPYING_SUMMARY.md  __init__.py  run_tests.py  run_tests_simple.py  test_comparison_engine.py  test_data_normalization.py  test_document_validation.py  test_field_extraction.py  test_financial_education.py  test_integration.py  test_lab3_file_copying.py  test_metrics_calculation.py  test_mlops_anomaly_detection.py  test_mlops_bias_detection.py  test_mlops_data_acquisition.py  test_mlops_validation.py  test_ocr_extraction.py  test_rag_chatbot_service.py  test_schema_validation.py  test_search_functionality.py  test_table_extraction.py  verify_tests.py
typings/airflow/: __init__.pyi
typings/airflow/operators/: __init__.pyi
typings/airflow/operators/python/: __init__.pyi
